{
  "version": 4,
  "terraform_version": "0.14.7",
  "serial": 316,
  "lineage": "bca8857c-76c4-172b-a88d-bc24a9b3e0d5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "sslip_io",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:288053528466:route-table/rtb-06a4be4a9b81559f1",
            "default_route_table_id": "rtb-06a4be4a9b81559f1",
            "id": "rtb-06a4be4a9b81559f1",
            "owner_id": "288053528466",
            "propagating_vgws": null,
            "route": [
              {
                "cidr_block": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b539e35d0040fd31",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b539e35d0040fd31",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "vpc_id": "vpc-0c1d822e14b58980a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.sslip_io",
            "aws_vpc.sslip_io"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "sslip_io",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:288053528466:internet-gateway/igw-0b539e35d0040fd31",
            "id": "igw-0b539e35d0040fd31",
            "owner_id": "288053528466",
            "vpc_id": "vpc-0c1d822e14b58980a"
          },
          "dependencies": [
            "aws_vpc.sslip_io"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sslip_io",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f9ba3db17fd5f3d2",
            "route_table_id": "rtb-06a4be4a9b81559f1",
            "subnet_id": "subnet-0757f11be4eb2ba8a"
          },
          "dependencies": [
            "aws_default_route_table.sslip_io",
            "aws_internet_gateway.sslip_io",
            "aws_subnet.sslip_io",
            "aws_vpc.sslip_io"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_everything",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:288053528466:security-group/sg-0e0a0e40db321398c",
            "description": "we are bold, we are brave, we are naked (as far as firewalls are concerned)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e0a0e40db321398c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow_everything",
            "name_prefix": "",
            "owner_id": "288053528466",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_everything"
            },
            "tags_all": {
              "Name": "allow_everything"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c1d822e14b58980a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.sslip_io"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sslip_io",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:288053528466:subnet/subnet-0757f11be4eb2ba8a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.241.0.0/24",
            "id": "subnet-0757f11be4eb2ba8a",
            "ipv6_cidr_block": "2600:1f18:1101:8300::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-01ffa1e6549e0cb51",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "288053528466",
            "tags": {
              "Name": "sslip_io"
            },
            "tags_all": {
              "Name": "sslip_io"
            },
            "vpc_id": "vpc-0c1d822e14b58980a"
          },
          "dependencies": [
            "aws_vpc.sslip_io"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "sslip_io",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:288053528466:vpc/vpc-0c1d822e14b58980a",
            "assign_generated_ipv6_cidr_block": true,
            "cidr_block": "10.241.0.0/16",
            "default_network_acl_id": "acl-0ada6ac5f14d51d5f",
            "default_route_table_id": "rtb-06a4be4a9b81559f1",
            "default_security_group_id": "sg-0df469b8960450559",
            "dhcp_options_id": "dopt-63836a06",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0c1d822e14b58980a",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-0de99054d3e329196",
            "ipv6_cidr_block": "2600:1f18:1101:8300::/56",
            "main_route_table_id": "rtb-06a4be4a9b81559f1",
            "owner_id": "288053528466",
            "tags": {
              "Name": "sslip_io"
            },
            "tags_all": {
              "Name": "sslip_io"
            }
          }
        }
      ]
    }
  ]
}